# python-project-52

./: .coverage  .gitignore  .mixins.py.swp  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  sonar-project.properties  tox.ini
.github/workflows/: ci.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  settings.py  settings_test.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_labels.py
task_manager/templates/: base.html  general_delete_form.html  general_form.html  index.html  index_base.html
task_manager/templates/labels/: labels_confirm_delete.html  labels_form.html  labels_index.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: statuses_confirm_delete.html  statuses_form.html  statuses_index.html
task_manager/templates/tasks/: tasks_confirm_delete.html  tasks_detail.html  tasks_form.html  tasks_index.html
task_manager/templates/users/: create.html  index.html  (+7 more)
task_manager/users/: admin.py  forms.py  models.py  test_views.py  tests.py  urls.py  views.py
(+5 files in other folders)
