[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-bootstrap5>=25.2",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "ipython>=9.5.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.1.1",
    "rollbar>=1.3.0",
    "uvicorn>=0.35.0",
    "whitenoise[brotli]>=6.9.0",
]

[tool.setuptools]
packages = ["task_manager", "task_manager.labels", "task_manager.statuses", "task_manager.tasks", "task_manager.users"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] 
packages = ["task_manager"]
